--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -23,7 +23,7 @@
              // i leave blank if you don't want to change it
         = f.password_field :password, autocomplete: "new-password", class: "form-control"
         - if @minimum_password_length
-          em.form-text.text-muted Password length min. #{@minimum_password_length}
+          em.form-text.text-muted Password length min. #{@minimum_password_length} characters.
 
       .form-group
         = f.label :password_confirmation
@@ -40,4 +40,4 @@
       = button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger mt-4", data: { confirm: "Are you sure?" }, method: :delete
     
     .back.mt-4
-      = link_to "Back", :back
+      = link_to "Back", root_path
