setup index and show

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -13,4 +13,4 @@ table.table
         td = user.username
         td = user.email
         td = user.role
-        td = link_to 'Show', edit_user_registration_path
+        td = link_to "bearbeiten", user_path(user.id)
