--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -5,7 +5,7 @@ ul.list-group.mt-4
       
   - if devise_mapping.registerable? && controller_name != 'registrations'
     li.list-group-item.p-0
-      = link_to "Sign up", new_registration_path(resource_name)
+      = link_to "Sign up", new_user_path
 
   - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' 
     li.list-group-item.p-0
